Bug 31788 - r600g: Fix location for clip plane registers
Summary: r600g: Fix location for clip plane registers
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-20 06:44 UTC by Owen Taylor
Modified: 2010-11-20 09:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
r600g: Fix location for clip plane registers (1.49 KB, patch)
2010-11-20 06:44 UTC, Owen Taylor
Details | Splinter Review

Description Owen Taylor 2010-11-20 06:44:03 UTC
This fixes a failure with the improved Piglit user-test clip in bug 31787
(problem originally discovered in Clutter conformance test suite)

This makes the r600 registers correspond between r600c and r600g. The
corresponding evergreen code uses a stride of 4 for both r600c and r600g -
from the register locations it doesn't appear that can be correct but
without hardware or docs at hand, I didn't want to change it in this
patch. Should be checked.
Comment 1 Owen Taylor 2010-11-20 06:44:08 UTC
Created attachment 40436 [details] [review]
r600g: Fix location for clip plane registers

The stride between the different clip plane registers was incorrect.
Comment 2 Alex Deucher 2010-11-20 09:23:12 UTC
Thanks, committed:
c63a86e1e5665fb5cd94de42d6c59171398e12ee

Evergreen needs the fix as well, and I added it.  For reference, you can find the evergreen regs here:
http://cgit.freedesktop.org/xorg/driver/xf86-video-ati/tree/src/evergreen_reg_auto.h
http://cgit.freedesktop.org/xorg/driver/xf86-video-ati/tree/src/evergreen_reg.h


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.